# Dev_suite_agents

./: .env.example  .gitignore  README.md  commands.txt  nginx-crewai-context.md  nginx-react-setup.sh  nginx.conf  pyproject.toml
SkateShopApp/backend/: index.js  package.json  seed.js
SkateShopApp/backend/middleware/: auth.js
SkateShopApp/backend/models/: Order.js  Product.js  User.js
SkateShopApp/backend/routes/: auth.js  orders.js  products.js
SkateShopApp/frontend/: package.json  tailwind.config.js
SkateShopApp/frontend/src/screens/: HomeScreen.js  SplashScreen.js
SkateShopApp/frontend/src/services/: api.js
SkateShopApp/frontend/src/store/: useStore.js
src/: App.jsx  index.css
src/dev_suite/: crew.py  main.py
src/dev_suite/config/: agents.yaml  tasks.yaml
src/dev_suite/tools/: nginx_tool.py  pdf_read_tool.py
