[project]
name = "dev_suite"
version = "0.1.0"
description = "dev_suite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "langchain-google-genai",
    "pypdf",
    "python-dotenv"
]

[project.scripts]
dev_suite = "dev_suite.main:run"
run_crew = "dev_suite.main:run"
train = "dev_suite.main:train"
replay = "dev_suite.main:replay"
test = "dev_suite.main:test"
run_with_trigger = "dev_suite.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
